--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,22 @@
 {
-  "name": "nubium/puffin",
-  "license": "MIT",
-  "description": "Compare current website with its expected visual representation.",
-  "require": {
-    "codeception/codeception": "~2.1.0"
-  },
-  "authors": [
-    {
-      "name": "Ondrej Hatala",
-      "email": "ondriq.h@gmail.com"
+    "name": "nubium/puffin",
+    "description": "Compare current website with its expected visual representation.",
+    "require": {
+        "codeception/codeception": "~2.2 || < 2.3"
     },
-    {
-      "name": "Jiri Travnicek",
-      "email": "jiri.travnicek@outlook.com"
+    "authors": [
+        {
+            "name": "Ondrej Hatala",
+            "email": "ondriq.h@gmail.com"
+        },
+        {
+            "name": "Jiri Travnicek",
+            "email": "jiri.travnicek@outlook.com"
+        }
+    ],
+    "autoload": {
+        "classmap": [
+            "module/"
+        ]
     }
-  ],
-  "autoload": {
-    "classmap" : [ "module/" ]
-  }
 }
