composer.json: exclude tests, gitignore and travis.yml from archive

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,15 @@
     }
   ],
   "autoload": {
-    "classmap" : [ "module/" ]
+    "classmap": [
+      "module/"
+    ]
+  },
+  "archive": {
+    "exclude": [
+      "tests",
+      ".travis.yml",
+      ".gitignore"
+    ]
   }
 }
